ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: talk-booker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: testhost
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: talk-booker-front-end
          servicePort: 80
      - path: /api/(.*)
        backend:
          serviceName: talk-booker-back-end
          servicePort: 8080
